// SPDX-License-Identifier: Apache-2.0
//
// Copyright Â© 2017 Trust Wallet.

syntax = "proto3";

package TW.{BLOCKCHAIN}.Proto;
option java_package = "wallet.core.jni.proto";

import "Common.proto";

// TODO: typical balance transfer, add more fields needed to sign
message TransferMessage {
    int64 amount = 1;
    int64 fee = 2;
    string to = 3;
}

// TODO: Input data necessary to create a signed transaction.
message SigningInput {
    bytes private_key = 1;

    oneof message_oneof {
        TransferMessage transfer = 2;
    }
}

// Transaction signing output.
message SigningOutput {
    // Signed and encoded transaction bytes.
    bytes encoded = 1;

    // A possible error, `OK` if none.
    Common.Proto.SigningError error = 2;

    string error_message = 3;
}
